Refactor to use generics and streamline method calls
Updated method signatures and data types to adopt generics across various classes, improving type safety and code clarity. Replaced redundant calls like `remove(0)` with clearer alternatives such as `removeFirst`.